# dprint-zed

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  dprint.json  extension.toml  justfile  rust-toolchain.toml
.github/workflows/: ci.yml
src/: dprint.rs  lib.rs
